--- a/projetos/mapa-unicesumar/style.css
+++ b/projetos/mapa-unicesumar/style.css
@@ -1,5 +1,6 @@
 html, body{
-    margin: 0;
+    margin: 0%;
+    padding: 0%;
     height: 100%;
     min-height: 100%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
@@ -95,7 +96,7 @@ h1{
     background-color: brown;
     padding-bottom: 2px;
     padding-top: 2px;
-    border-radius: 9px;
+    
 }
 
 #main{
@@ -109,7 +110,6 @@ h1{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 9px;
     
 }
 
