--- a/CSS/intermediario/background-attachment-shorthand/style.css
+++ b/CSS/intermediario/background-attachment-shorthand/style.css
@@ -1,23 +1,21 @@
 body{
     /*Faz com que os objetos de body sejam redimensionados a altura automaticamente de acordo com a view port*/
         height:98vh;
-        background-color:black;
-        background-image: url('https://i.imgur.com/cKKMq5v.jpg');
-        background-repeat:no-repeat;
-        background-position: center center;
-        background-size: cover;
-        background-attachment: scroll;
+
+        /*shorthand background
+        color ->  image -> position -> /[size] -> repeat->    attachment
+        */
+
+        background: black url("https://i.imgur.com/cKKMq5v.jpg") center center /cover repeat-y scroll;
         /*scroll - Fundo rola junto com o conteudo ao arrastar com o scroll do mpuse
         fixed- Fundo fica fixo junto com o conteudo ao arrastar com o scroll do mpuse
         */
         
-        /*shorthand background
-        color ->  image ->  repeat->  position ->  [size]  attachment
-        */
+        
     }
     main{
         background-color:white;
-        max-width:400px;
+        max-width: 700px;
         margin: auto;
         padding:10px;
         border-radius: 15px;
