--- a/CSS/intermediario/background-position/style.css
+++ b/CSS/intermediario/background-position/style.css
@@ -2,10 +2,38 @@ body{
     /*Faz com que os objetos de body sejam redimensionados a altura automaticamente de acordo com a view port*/
         height:98vh;
     }
+    div.rect-0{
+        background-image: url('https://i.imgur.com/cKKMq5v.jpeg');
+        height: 850px;
+        width: 1290px;
+    }
+
     div.rect{
     
-        background-image: url('https://i.imgur.com/cKKMq5v.jpg');
-        background-position: left center;
+        background-image: url('https://i.imgur.com/cKKMq5v.jpeg');
+
+        /*
+        VALORES PARA O TOPO DA CAIXA:
+        left top (canto superior esquerdo)
+        center top (canto superior central)
+        right top (canto superior direito)
+
+        ALORES PARA O CENTRO DA CAIXA:
+        left center (centro esquerdo)
+        center center (centro centro)
+        right center (centro direito)
+
+        VALORES PARA A BASE DA CAIXA:
+        left bottom (canto inferior esquerdo)
+        center bottom (canto inferior central)
+        right bottom (canto inferior direito)
+
+        Sempre divida visualmente em COLULAS E LINHAS a caixa que você quer aplicar um background. 
+        Colunas - (Coluna Esquerda, Central e Direita)
+        Linhas - (Linha do Topo, Centro e Base). 
+        
+        */
+        /*background-position: left center;/*
         /*background-position: top */
         /*background-position: left */
         /*background-position: right*/
@@ -15,10 +43,27 @@ body{
         /*background-position: left center*/
         /*background-position: right bottom*/
         /*background-position: center center*/
-        height:850px;
+        height:200px;
+        width: 1290px;
         border:1px solid black;
         border-radius: 20px;
         margin: 10px;
         
         
+    }
+
+    div#q1 {
+        background-position: left top;
+    }
+
+    div#q2 {
+        background-position: left center;
+    }
+
+    div#q3 {
+        background-position: right bottom;
+    }
+
+    div#q4 {
+        background-position: center center;
     }
