--- a/CSS/avancado/mobile-first/estilos/media-query.css
+++ b/CSS/avancado/mobile-first/estilos/media-query.css
@@ -2,6 +2,91 @@
 
 /* Todas as demais mídias */
 
-@media print {
+/* Typical Devices Breakpoints
+ Não há um conjunto único de pontos de interrupção para sites. No entanto, com base nos tamanhos e resoluções comuns do dispositivo e em uma abordagem baseada em conteúdo, alguns dos principais pontos de interrupção a serem usados como ponto de partida são 320px, 480px, 768px, 1024px, 1280px e 1440px ou superior.
+*/
+
+
+/* Typical Devices Breakpoints
+Celular pequeno -  até 575px (small)
+Celular comum - de 576px até 767px (medium)
+Tablets e laptops pequenos - de 768px á 991px (large)
+Desktop: 992px até 1200px
+TV e grandes telas - +1200px (extra large)
+
+
+*/
+@media print { /* IMPRESSÃO */
+    /* No papel não tem como imprimir background */
+   /*  body {
+        background-image: url(../imagens/back-print.jpg); /* Desnecessário */
+   
+   *{
+        font-family: 'Courier New', Courier, monospace;
+   }
+
+   main {
+    border: 2px solid black;
+   }
+    main h1{
+        color: black;
+        text-shadow: none;
+        
+    }
+
+    img#phone { display: none;}
+    img#tablet {display: none;}
+    img#print {display: block;}
+    img#pc {display: none;}
+    img#tv {display:none;}
+}
+
+/* PARA DISPOSITIVOS MÓVEIS: */
+/* @media screen and (max-width: 575px) {
+
+}
+
+@media screen and (min-width:576px) and (max-width: 767px){
     
+} */
+
+@media screen and (min-width: 768px) and (max-width: 991px){ /* TABLET */
+
+    body{
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+
+    img#phone { display: none;}
+    img#tablet {display: block;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display:none;}
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px){ /* DESKTOP */
+
+    body{
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#phone { display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: block;}
+    img#tv {display:none;}
+}
+
+@media screen and (min-width:1200px){ /* GRANDES TELAS */
+
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+    }
+
+    main{
+        width: 700px;
+    }
+    img#phone { display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display:block;}
 }
