--- a/CSS/avancado/menu_responsivo/style.css
+++ b/CSS/avancado/menu_responsivo/style.css
@@ -1,45 +1,76 @@
 @charset "UTF-8";
 
-*{
+* {
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
-header h1{
+
+body, html {
+    background-color: lightgray;
+}
+
+header {
+    background-color: rgb(148, 148, 148);
+}
+
+header h1 {
     text-align: center;
     padding: 10px;
 }
-menu li{
-    display: inline;
-    background-color: rgb(51, 51, 51);
+
+i#burguer {
+    background-color: rgb(43, 43, 43);
+    display: block;
     color: white;
+    text-align: center;
     padding: 10px;
-    
+    cursor: pointer; /* Faz com que o cursor vire uma mão */
 }
 
-menu li:hover{
+i#burguer:hover{
+    background-color: white;
+    color: black;
+}
+
+menu {
+    display: block;
+}
+
+menu ul {
+    list-style-type: none;
+}
+
+menu a {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    color: white;
+    padding: 10px;
+    background-color: rgb(51, 51, 51);
+    border-top: 2px solid gray;
+}
+
+menu a:hover {
     background-color: rgb(155, 17, 17);
 }
 
-menu a{
-    text-decoration: none;
-    color: white;
-}
-body{
-    background-color: gray;
-    
-}
 
-main{
-    margin-top: 20px;
+main {
     background-color: white;
-}
-
-main h1 {
-    padding-top: 10px;
-}
-
-main p {
+    width: 90vw;
+    margin: auto;
     margin-top: 10px;
-    text-indent: 10px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+article h2 {
+    padding-bottom: 20px;
+}
+
+article p {
+    text-align: justify;
+    margin-bottom: 20px;
+    text-indent: 20px;
 }
